--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,9 @@ spring:
   datasource:
     # 数据库配置，留空或使用占位符，以便其他开发者知道需要配置哪些字段
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/your_database
-    username: your_username
-    password: your_password
+    url: jdbc:mysql://119.29.20.235/dispatch
+    username: root
+    password: xymgym041232@GYM
 
 mybatis:
   configuration:
@@ -39,4 +39,4 @@ knife4j:
 
 api:
   key:
-    your-gaode-api-key
+    3dbb916f37c6fae92c4a8f7fcd35c5aa
